css/style.css
*,*::before, *::after{
    margin:0;
    padding:0;
    box-sizing: border-box;
}

:root{
    --skin-color: #f1d1ab;
    --background: #14279B;
}
html{
    font-size: 62.5%;
}

body{
    display:flex;
    justify-content: center;
    align-items: center;
    min-height:100vh;
    background: var(--background);
}

.card{
    width:40rem;
    height:40rem;
}

.card:hover{
    cursor:pointer;
}

.shinchan{
    position:absolute;
    top:53%;
    left:49%;
    transform: translate(-50%,-50%);
}

.shinchan__head{
    position:relative;
    transform: scale(0.8);
}

.shinchan__headTop{
    height:12rem;
    width:27rem;
    background:var(--skin-color);
    position:absolute;
    right:6.3%;
    top: -60%;
    border: 0.3rem solid black;
    border-bottom: none;
    border-top-left-radius: 55rem;
    border-top-right-radius: 50rem;
    transform: rotate(-10deg);
}


.shinchan__topHear{
    height:20rem;
    width:25rem;
    border-top-left-radius: 30rem;
    border-top-right-radius: 30rem;
    position:absolute;
    right:1%;
    top: -60%;
    background: black;
    z-index: -1;
    transform: rotate(-10deg) scale(1.2);
}

.shinchan__headBottom{
    height:17rem;
    width:34rem;
    background:var(--skin-color);;
    border-top-left-radius: 40rem;
    border-bottom-left-radius: 40rem;
    border:0.3rem solid black;
    border-top: none;
    transform: rotate(-10deg);
}

.shinchan__ear{
    background: var(--skin-color);
    height: 12rem;
    border-radius: 50%;
    width: 10rem;
    left:31rem;
    top:3rem;
    position:absolute;
    border:0.3rem solid black;
    border-left: 0.3rem solid transparent;
}

.shinchan__eye{
    height: 7rem;
    width:7rem;
    background:black;
    position:absolute;
    border-bottom-right-radius:49%;
    border-top-right-radius:48%;
    border-bottom-left-radius: 50%;
    border-top-left-radius: 48%;
    top:-15%;
    transform:skewX(-3deg);
}

.shinchan__eye::before{
    content:"";
    height:40%;
    width:45%;
    position:absolute;
    background: white;
    top:50%;
    left:50%;
    transform: translate(-40%,-50%);
    border-radius:50%;
    border-top-right-radius:40%;
    border-bottom-left-radius: 40%;
  
}

.shinchan__eye--left{
    left:35%;
}

.shinchan__eye--right{
    right:10%;
}

.shinchan__mouth{
    height: 8rem;
    width: 6rem;
    position:absolute;
    background:#B26261;
    border-radius: 50%;
    border:0.3rem solid black;
    top:12rem;
    left:7rem;
    transform: rotate(20deg);
}

.shinchan__brow{
    position:absolute;
    width: 8rem;
    height:8rem;
    clip-path: polygon(0% 0%, 100% 0%, 100% 50%, 0% 50%);
    border-top: 0.3rem solid black;
    border-radius:50%;
    top:-5rem;
}

.shinchan__brow--left{
    left:10rem;
    transform:rotate(4deg);
}

.shinchan__brow--right{
    right:4rem;
    transform:rotate(4deg);
}

.shinchan__bigBrow{
    width: 8.5rem;
    height:8.5rem;
    position:absolute;
    border: 2rem solid black;
    border-radius: 2rem;
    clip-path: polygon(0% 0%, 85% 0%, 0% 85%);
    top:-55%;
    transform:rotate(45deg);
}

.shinchan__bigBrow--left{
    left:10rem;
}

.shinchan__bigBrow--right{
    left:21.5rem;
}

@media screen and (min-width: 31.25rem) {
    .card{
        width:40rem;
        height:40rem;
        background: linear-gradient(145deg, #152aa6, #12238c);    border-radius:5rem;
        box-shadow: 13px 13px 26px #0e1c70,
                 -13px -13px 26px #1a32c6;
        transition: 0.2s all;
    }    

    .card:active{
        background: #14279B;
        box-shadow: inset 13px 13px 26px #0e1c70,
                inset -13px -13px 26px #1a32c6;
    }
}

